# EZpanso

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  EZpanso-arm64.spec  EZpanso-intel.spec  EZpanso.spec  IMPROVEMENTS_SUMMARY.md  LICENSE  NSEXCEPTION_FIX_SUMMARY.md  README.md  Readme.md  analyze_build.py  build.py  build.sh  build_all.sh  build_and_release.py  build_apple_silicon.sh  build_current_arch.sh  build_intel.sh  build_macos.sh  build_multi_arch.sh  build_separate.sh  cleanup.py  config_manager.py  constants.py  core_simplified_main.py  data_model.py  devlog.md  file_handler.py  file_version_info.txt  icon.icns  main.py  main.spec  main_backup.py  main_improved.py  pyproject.toml  qt_data_loader.py  release_notes_temp.md  release_summary_v1.2.1.sh  (+25 more)
.github/: copilot-instructions.md
archives/: main.py  main2.py  main20250531.py  main3.py  main4.py  main5.py  qt_demo.py  ui_dialogs.py
docs/: ACTION_PLAN.md  BUG_FIX_SUMMARY.md  BUILD_SEPARATION_SUMMARY.md  CROSS_PLATFORM_BUILD_TESTING.md  GITHUB_RELEASE_INSTRUCTIONS_v1.2.1.md  MACOS_DISTRIBUTION_FIX.md  MACOS_GATEKEEPER_WORKAROUND.md  PRODUCT_REQUIREMENTS.md  PROJECT_STATUS.md  RELEASE_PREPARATION_v1.2.1.md  RELEASE_SUMMARY_v1.2.1.md  YAML_COMMENT_PRESERVATION_IMPLEMENTATION.md  ezpanso.spec
scripts/: analyze_build.py  cleanup.py  codesign_app.sh  demo_comment_preservation.py  entitlements.plist  fix_gatekeeper_issue.sh
tests/: README_test.md  TESTS_REORGANIZATION_SUMMARY.md  __init__.py  bug_fixes_test.py  build_test.py  core_tests.py  cross_platform_test.py  pytest.ini  save_refresh_test.py  (+3 more)
(+9 files in other folders)
